﻿shmuel 02.10.2015 00:42:24 +0200 - build 531

1. LuaFAR: несколько изменилась интерпретация значения, возвращаемого export.ProcessConsoleInput -
   см. мануал.
   
2. M#2944: Добавить обработку ProcessConsoleInputW.

shmuel 26.09.2015 00:42:09 +0200 - build 530

1. Загрузка макросов: при обнаружении несуществующих имён флагов выдаются сообщения об ошибке.

shmuel 23.09.2015 19:34:14 +0200 - build 529

1. LuaFAR + generic plugin:
   a) При загрузке и перезагрузке стартового скрипта плагина ему передаётся один аргумент булевого типа:
        true - при первой загрузке скрипта и при загрузке, вызванной значением _G.RecreateLuaState.
        false - при перезагрузке скрипта, вызванной значением far.ReloadDefaultFile.
   b) Отменяется установка _G.IsLuaStateRecreated = true перед перезагрузкой, вызванной значением
      _G.RecreateLuaState (в этом более нет надобности, в связи с пунктом "a").

2. LuaMacro: косметическая правка в плагине, связанная с пунктом "1".

shmuel 18.09.2015 19:42:34 +0200 - build 528

1. Уточнение 526.

shmuel 18.09.2015 13:00:27 +0200 - build 527

1. Уточнение 526.

shmuel 18.09.2015 12:29:10 +0200 - build 526

1. LuaFAR: M#2384: Нужна глобальная таблица guid'ов диалогов фара.
   --> Таблица far.Guids.

shmuel 04.09.2015 21:48:41 +0200 - build 525

1. M#3067: LuaFAR: far.SubscribeDialogDrawEvents не срабатывает в момент Msg==F.DN_INITDIALOG and Event==F.DE_DLGPROCINIT

shmuel 31.08.2015 18:33:16 +0200 - build 524

1. M#3068: LuaFAR: не работает изменение цветовых атрибутов в DN_CTLCOLORDLGITEM

shmuel 17.08.2015 18:56:17 +0200 - build 523

1. M#3035: LuaFAR: Запретить обработку событий в диалогах во время вывода сообщения об ошибке

shmuel 06.08.2015 22:31:56 +0200 - build 522

1. M#3050: Падение при непрерывном вызове DM_KEY

shmuel 26.07.2015 03:06:22 +0200 - build 521

1. LuaFAR: убрано лишнее поле StructSize из таблицы, возвращаемой по DM_GETDIALOGINFO.

shmuel 17.06.2015 23:31:43 +0200 - build 520
